# rune-data-server

./: .dockerignore  .env.example  CHANGELOG.md  Cargo.toml  README.md  mise.toml  release-please-config.json
.cargo/: config.toml
.github/: CODEOWNERS  CONTRIBUTING.md  renovate.json
.github/actions/publish/: action.yml
.github/workflows/: ci.yaml  release.yaml
src/: db.rs  env.rs  main.rs  routes.rs
src/routes/: health.rs
